[gd_scene load_steps=5 format=2]

[ext_resource path="res://Weapons/Modules/ball_lightning/whip_lightning/whip_lightning.gd" type="Script" id=1]
[ext_resource path="res://VFX/shaders/energy_beam.tres" type="Shader" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 90.0

[sub_resource type="ShaderMaterial" id=5]
shader = ExtResource( 2 )
shader_param/beams = 1
shader_param/energy = 15.0
shader_param/roughness = 3
shader_param/frequency = 10
shader_param/speed = 0.2
shader_param/thickness = 0.01
shader_param/outline_thickness = 0.01
shader_param/beam_difference = 0.5
shader_param/glow = 0.0
shader_param/outline_glow = 0.0
shader_param/color = Color( 0.91, 1, 1, 1 )
shader_param/outline_color = Color( 0.5, 1, 0.96, 1 )
shader_param/progress = 1.0
shader_param/y_offset = 0.0
shader_param/fixed_edge_size = 0.05
shader_param/noise_scale = Vector2( 1, 1 )

[node name="whip_lightning" type="Node2D"]
script = ExtResource( 1 )
cooldown = 0.5

[node name="DetectionZone" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionZone"]
shape = SubResource( 1 )

[node name="RayCast2D" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 0 )

[node name="ColorRect" type="ColorRect" parent="RayCast2D"]
material = SubResource( 5 )
margin_top = -35.0
margin_right = 88.0
margin_bottom = 35.0
rect_pivot_offset = Vector2( 0, 35 )

[node name="HitCooldown" type="Timer" parent="."]
one_shot = true

[node name="Tween" type="Tween" parent="."]

[connection signal="body_entered" from="DetectionZone" to="." method="_on_DetectionZone_body_entered"]
[connection signal="body_exited" from="DetectionZone" to="." method="_on_DetectionZone_body_exited"]
[connection signal="timeout" from="HitCooldown" to="." method="_on_HitCooldown_timeout"]
